src/Frontend/LambdaQ/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Frontend/LambdaQ/Par.y
-----------------------------------------------------------------------------

state 50 contains 1 shift/reduce conflicts.
state 134 contains 1 shift/reduce conflicts.
state 135 contains 1 shift/reduce conflicts.
state 184 contains 2 shift/reduce conflicts.
state 186 contains 2 shift/reduce conflicts.
state 274 contains 17 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Double -> L_doubl                                  (1)
	Integer -> L_integ                                 (2)
	BitVariable -> L_BitVariable                       (3)
	Var -> L_Var                                       (4)
	Lambda -> L_Lambda                                 (5)
	Program -> ListFunctionDeclaration                 (6)
	IntegerExpression -> IntegerExpression '+' IntegerExpression1   (7)
	IntegerExpression -> IntegerExpression '-' IntegerExpression1   (8)
	IntegerExpression -> IntegerExpression1            (9)
	IntegerExpression1 -> IntegerExpression1 '*' IntegerExpression2   (10)
	IntegerExpression1 -> IntegerExpression1 '/' IntegerExpression2   (11)
	IntegerExpression1 -> IntegerExpression2           (12)
	IntegerExpression2 -> Integer                      (13)
	IntegerExpression2 -> '(' IntegerExpression ')'    (14)
	BoolValue -> 'True'                                (15)
	BoolValue -> 'False'                               (16)
	BoolExpression -> BoolExpression '&&' BoolExpression1   (17)
	BoolExpression -> BoolExpression '||' BoolExpression1   (18)
	BoolExpression -> 'not' BoolExpression1            (19)
	BoolExpression -> BoolExpression1                  (20)
	BoolExpression1 -> BoolExpression1 '==' BoolExpression2   (21)
	BoolExpression1 -> BoolExpression1 '/=' BoolExpression2   (22)
	BoolExpression1 -> BoolExpression2                 (23)
	BoolExpression2 -> IntegerExpression2 '==' IntegerExpression2   (24)
	BoolExpression2 -> IntegerExpression2 '/=' IntegerExpression2   (25)
	BoolExpression2 -> IntegerExpression2 '>' IntegerExpression2   (26)
	BoolExpression2 -> IntegerExpression2 '>=' IntegerExpression2   (27)
	BoolExpression2 -> IntegerExpression2 '<' IntegerExpression2   (28)
	BoolExpression2 -> IntegerExpression2 '<=' IntegerExpression2   (29)
	BoolExpression2 -> BoolValue                       (30)
	BoolExpression2 -> '(' BoolExpression ')'          (31)
	Type -> Type '->' Type1                            (32)
	Type -> Type1                                      (33)
	Type1 -> Type1 '+' Type2                           (34)
	Type1 -> Type2                                     (35)
	Type2 -> Type2 '*' Type3                           (36)
	Type2 -> Type3                                     (37)
	Type3 -> Type4 '**' Integer                        (38)
	Type3 -> '!' Type4                                 (39)
	Type3 -> Type4                                     (40)
	Type5 -> 'Bool'                                    (41)
	Type5 -> 'Bit'                                     (42)
	Type5 -> 'Int'                                     (43)
	Type5 -> 'Qbit'                                    (44)
	Type5 -> '()'                                      (45)
	Type5 -> '[' Type ']'                              (46)
	Type5 -> '(' Type ')'                              (47)
	Type4 -> Type5                                     (48)
	Angle -> Double                                    (49)
	BasisState -> '@0'                                 (50)
	BasisState -> '@1'                                 (51)
	BasisState -> '@+'                                 (52)
	BasisState -> '@-'                                 (53)
	BasisState -> '@+i'                                (54)
	BasisState -> '@-i'                                (55)
	Bit -> BitVariable                                 (56)
	Gate -> 'H'                                        (57)
	Gate -> 'X'                                        (58)
	Gate -> 'Y'                                        (59)
	Gate -> 'Z'                                        (60)
	Gate -> 'ID'                                       (61)
	Gate -> 'ROOT_X' Integer                           (62)
	Gate -> 'ROOT_X_DAG' Integer                       (63)
	Gate -> 'ROOT_Y' Integer                           (64)
	Gate -> 'ROOT_Y_DAG' Integer                       (65)
	Gate -> 'ROOT_Z' Integer                           (66)
	Gate -> 'ROOT_Z_DAG' Integer                       (67)
	Gate -> 'S'                                        (68)
	Gate -> 'S_DAG'                                    (69)
	Gate -> 'T'                                        (70)
	Gate -> 'T_DAG'                                    (71)
	Gate -> 'SQRT_X'                                   (72)
	Gate -> 'SQRT_X_DAG'                               (73)
	Gate -> 'SQRT_Y'                                   (74)
	Gate -> 'SQRT_Y_DAG'                               (75)
	Gate -> 'RX' Angle                                 (76)
	Gate -> 'RY' Angle                                 (77)
	Gate -> 'RZ' Angle                                 (78)
	Gate -> 'U1' Angle                                 (79)
	Gate -> 'U2' '(' Angle ',' Angle ')'               (80)
	Gate -> 'U3' '(' Angle ',' Angle ',' Angle ')'     (81)
	Gate -> 'SWAP'                                     (82)
	Gate -> 'SQRT_SWAP'                                (83)
	Gate -> 'SQRT_SWAP_DAG'                            (84)
	Gate -> 'ISWAP'                                    (85)
	Gate -> 'FSWAP'                                    (86)
	Gate -> 'SWAP_THETA' Angle                         (87)
	Gate -> 'ROOT_SWAP' Integer                        (88)
	Gate -> 'ROOT_SWAP_DAG' Integer                    (89)
	Gate -> 'QFT' Integer                              (90)
	Gate -> 'QFT_DAG' Integer                          (91)
	ListVar -> Var                                     (92)
	ListVar -> Var ',' ListVar                         (93)
	ControlBasisState -> '[' BasisState ']'            (94)
	ControlBasisStates -> '[' BasisState ',' ListBasisState ']'   (95)
	ListBasisState -> BasisState                       (96)
	ListBasisState -> BasisState ',' ListBasisState    (97)
	ControlBit -> '[' Integer ']'                      (98)
	ControlBits -> '[' Integer ',' ListInteger ']'     (99)
	ListInteger -> Integer                             (100)
	ListInteger -> Integer ',' ListInteger             (101)
	Tuple -> '(' Term ',' ListTerm ')'                 (102)
	ControlTerm -> '[' Term ']'                        (103)
	ControlTerms -> '[' Term ',' ListTerm ']'          (104)
	ListTerm -> Term                                   (105)
	ListTerm -> Term ',' ListTerm                      (106)
	Term1 -> 'if' Term 'then' Term 'else' Term         (107)
	Term1 -> 'let' '{' Var '=' Term '}' 'in' Term      (108)
	Term1 -> 'let' '{' '(' Var ',' ListVar ')' '=' Term '}' 'in' Term   (109)
	Term1 -> Var '<-' Term ';' Term                    (110)
	Term1 -> Var ',' ListVar '<-' Term ';' Term        (111)
	Term1 -> 'case' Term 'of' CaseExpression ListCaseExpression   (112)
	Term1 -> Lambda Var Type '.' Term                  (113)
	Term1 -> Term2 '$' Term1                           (114)
	Term1 -> Term2                                     (115)
	Term2 -> 'with' ControlTerm 'ctrl' ControlBasisState   (116)
	Term2 -> 'with' ControlTerms 'ctrl' ControlBasisStates   (117)
	Term2 -> 'with' ControlTerm 'ctrl' ControlBit      (118)
	Term2 -> 'with' ControlTerms 'ctrl' ControlBits    (119)
	Term2 -> Term2 Term3                               (120)
	Term2 -> Term2 '.' Term3                           (121)
	Term2 -> Term3                                     (122)
	Term3 -> Var                                       (123)
	Term3 -> '()'                                      (124)
	Term3 -> BasisState                                (125)
	Term3 -> BoolExpression                            (126)
	Term3 -> IntegerExpression                         (127)
	Term3 -> 'gate' Gate                               (128)
	Term3 -> Tuple                                     (129)
	Term3 -> Bit                                       (130)
	Term3 -> List                                      (131)
	Term3 -> Term4                                     (132)
	Term -> Term1                                      (133)
	Term4 -> '(' Term ')'                              (134)
	List -> '[]'                                       (135)
	List -> '[' Term ']'                               (136)
	List -> '[' Term ',' ListTerm ']'                  (137)
	List -> Term4 ':' List                             (138)
	List -> List '++' List                             (139)
	List -> List '!!' Integer                          (140)
	CaseExpression -> Term2 '->' Term2                 (141)
	ListCaseExpression -> CaseExpression               (142)
	ListCaseExpression -> CaseExpression ListCaseExpression   (143)
	Arg -> Var                                         (144)
	ListArg ->                                         (145)
	ListArg -> Arg ListArg                             (146)
	FunctionDefinition -> Var ListArg '=' Term         (147)
	FunctionDefinition -> FunctionDefinition ';'       (148)
	FunctionType -> Var '::' Type                      (149)
	FunctionType -> FunctionType ';'                   (150)
	FunctionDeclaration -> FunctionType ';' FunctionDefinition ';'   (151)
	ListFunctionDeclaration ->                         (152)
	ListFunctionDeclaration -> FunctionDeclaration ListFunctionDeclaration   (153)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!!'           { PT _ (TS _ 2) }
	'$'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	'()'           { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'**'           { PT _ (TS _ 9) }
	'+'            { PT _ (TS _ 10) }
	'++'           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'->'           { PT _ (TS _ 14) }
	'.'            { PT _ (TS _ 15) }
	'/'            { PT _ (TS _ 16) }
	'/='           { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	'::'           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<-'           { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'@+'           { PT _ (TS _ 28) }
	'@+i'          { PT _ (TS _ 29) }
	'@-'           { PT _ (TS _ 30) }
	'@-i'          { PT _ (TS _ 31) }
	'@0'           { PT _ (TS _ 32) }
	'@1'           { PT _ (TS _ 33) }
	'Bit'          { PT _ (TS _ 34) }
	'Bool'         { PT _ (TS _ 35) }
	'FSWAP'        { PT _ (TS _ 36) }
	'False'        { PT _ (TS _ 37) }
	'H'            { PT _ (TS _ 38) }
	'ID'           { PT _ (TS _ 39) }
	'ISWAP'        { PT _ (TS _ 40) }
	'Int'          { PT _ (TS _ 41) }
	'QFT'          { PT _ (TS _ 42) }
	'QFT_DAG'      { PT _ (TS _ 43) }
	'Qbit'         { PT _ (TS _ 44) }
	'ROOT_SWAP'    { PT _ (TS _ 45) }
	'ROOT_SWAP_DAG'{ PT _ (TS _ 46) }
	'ROOT_X'       { PT _ (TS _ 47) }
	'ROOT_X_DAG'   { PT _ (TS _ 48) }
	'ROOT_Y'       { PT _ (TS _ 49) }
	'ROOT_Y_DAG'   { PT _ (TS _ 50) }
	'ROOT_Z'       { PT _ (TS _ 51) }
	'ROOT_Z_DAG'   { PT _ (TS _ 52) }
	'RX'           { PT _ (TS _ 53) }
	'RY'           { PT _ (TS _ 54) }
	'RZ'           { PT _ (TS _ 55) }
	'S'            { PT _ (TS _ 56) }
	'SQRT_SWAP'    { PT _ (TS _ 57) }
	'SQRT_SWAP_DAG'{ PT _ (TS _ 58) }
	'SQRT_X'       { PT _ (TS _ 59) }
	'SQRT_X_DAG'   { PT _ (TS _ 60) }
	'SQRT_Y'       { PT _ (TS _ 61) }
	'SQRT_Y_DAG'   { PT _ (TS _ 62) }
	'SWAP'         { PT _ (TS _ 63) }
	'SWAP_THETA'   { PT _ (TS _ 64) }
	'S_DAG'        { PT _ (TS _ 65) }
	'T'            { PT _ (TS _ 66) }
	'T_DAG'        { PT _ (TS _ 67) }
	'True'         { PT _ (TS _ 68) }
	'U1'           { PT _ (TS _ 69) }
	'U2'           { PT _ (TS _ 70) }
	'U3'           { PT _ (TS _ 71) }
	'X'            { PT _ (TS _ 72) }
	'Y'            { PT _ (TS _ 73) }
	'Z'            { PT _ (TS _ 74) }
	'['            { PT _ (TS _ 75) }
	'[]'           { PT _ (TS _ 76) }
	']'            { PT _ (TS _ 77) }
	'case'         { PT _ (TS _ 78) }
	'ctrl'         { PT _ (TS _ 79) }
	'else'         { PT _ (TS _ 80) }
	'gate'         { PT _ (TS _ 81) }
	'if'           { PT _ (TS _ 82) }
	'in'           { PT _ (TS _ 83) }
	'let'          { PT _ (TS _ 84) }
	'not'          { PT _ (TS _ 85) }
	'of'           { PT _ (TS _ 86) }
	'then'         { PT _ (TS _ 87) }
	'with'         { PT _ (TS _ 88) }
	'{'            { PT _ (TS _ 89) }
	'||'           { PT _ (TS _ 90) }
	'}'            { PT _ (TS _ 91) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_BitVariable  { PT _ (T_BitVariable $$) }
	L_Var          { PT _ (T_Var _) }
	L_Lambda       { PT _ (T_Lambda $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Double          rule  1
	Integer         rule  2
	BitVariable     rule  3
	Var             rule  4
	Lambda          rule  5
	Program         rule  6
	IntegerExpression rules 7, 8, 9
	IntegerExpression1 rules 10, 11, 12
	IntegerExpression2 rules 13, 14
	BoolValue       rules 15, 16
	BoolExpression  rules 17, 18, 19, 20
	BoolExpression1 rules 21, 22, 23
	BoolExpression2 rules 24, 25, 26, 27, 28, 29, 30, 31
	Type            rules 32, 33
	Type1           rules 34, 35
	Type2           rules 36, 37
	Type3           rules 38, 39, 40
	Type5           rules 41, 42, 43, 44, 45, 46, 47
	Type4           rule  48
	Angle           rule  49
	BasisState      rules 50, 51, 52, 53, 54, 55
	Bit             rule  56
	Gate            rules 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91
	ListVar         rules 92, 93
	ControlBasisState rule  94
	ControlBasisStates rule  95
	ListBasisState  rules 96, 97
	ControlBit      rule  98
	ControlBits     rule  99
	ListInteger     rules 100, 101
	Tuple           rule  102
	ControlTerm     rule  103
	ControlTerms    rule  104
	ListTerm        rules 105, 106
	Term1           rules 107, 108, 109, 110, 111, 112, 113, 114, 115
	Term2           rules 116, 117, 118, 119, 120, 121, 122
	Term3           rules 123, 124, 125, 126, 127, 128, 129, 130, 131, 132
	Term            rule  133
	Term4           rule  134
	List            rules 135, 136, 137, 138, 139, 140
	CaseExpression  rule  141
	ListCaseExpression rules 142, 143
	Arg             rule  144
	ListArg         rules 145, 146
	FunctionDefinition rules 147, 148
	FunctionType    rules 149, 150
	FunctionDeclaration rule  151
	ListFunctionDeclaration rules 152, 153

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	L_Var          shift, and enter state 8
	%eof           reduce using rule 152

	Var            goto state 3
	Program        goto state 4
	FunctionType   goto state 5
	FunctionDeclarationgoto state 6
	ListFunctionDeclarationgoto state 7

State 1

	Double -> . L_doubl                                 (rule 1)

	L_doubl        shift, and enter state 2


State 2

	Double -> L_doubl .                                 (rule 1)

	'$'            reduce using rule 1
	'('            reduce using rule 1
	'()'           reduce using rule 1
	')'            reduce using rule 1
	','            reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	';'            reduce using rule 1
	'@+'           reduce using rule 1
	'@+i'          reduce using rule 1
	'@-'           reduce using rule 1
	'@-i'          reduce using rule 1
	'@0'           reduce using rule 1
	'@1'           reduce using rule 1
	'False'        reduce using rule 1
	'True'         reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'else'         reduce using rule 1
	'gate'         reduce using rule 1
	'not'          reduce using rule 1
	'of'           reduce using rule 1
	'then'         reduce using rule 1
	'with'         reduce using rule 1
	'}'            reduce using rule 1
	L_integ        reduce using rule 1
	L_BitVariable  reduce using rule 1
	L_Var          reduce using rule 1


State 3

	FunctionType -> Var . '::' Type                     (rule 149)

	'::'           shift, and enter state 11


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	FunctionType -> FunctionType . ';'                  (rule 150)
	FunctionDeclaration -> FunctionType . ';' FunctionDefinition ';'    (rule 151)

	';'            shift, and enter state 10


State 6

	ListFunctionDeclaration -> FunctionDeclaration . ListFunctionDeclaration    (rule 153)

	L_Var          shift, and enter state 8
	%eof           reduce using rule 152

	Var            goto state 3
	FunctionType   goto state 5
	FunctionDeclarationgoto state 6
	ListFunctionDeclarationgoto state 9

State 7

	Program -> ListFunctionDeclaration .                (rule 6)

	%eof           reduce using rule 6


State 8

	Var -> L_Var .                                      (rule 4)

	'!'            reduce using rule 4
	'$'            reduce using rule 4
	'('            reduce using rule 4
	'()'           reduce using rule 4
	')'            reduce using rule 4
	','            reduce using rule 4
	'->'           reduce using rule 4
	'.'            reduce using rule 4
	'::'           reduce using rule 4
	';'            reduce using rule 4
	'<-'           reduce using rule 4
	'='            reduce using rule 4
	'@+'           reduce using rule 4
	'@+i'          reduce using rule 4
	'@-'           reduce using rule 4
	'@-i'          reduce using rule 4
	'@0'           reduce using rule 4
	'@1'           reduce using rule 4
	'Bit'          reduce using rule 4
	'Bool'         reduce using rule 4
	'False'        reduce using rule 4
	'Int'          reduce using rule 4
	'Qbit'         reduce using rule 4
	'True'         reduce using rule 4
	'['            reduce using rule 4
	'[]'           reduce using rule 4
	']'            reduce using rule 4
	'else'         reduce using rule 4
	'gate'         reduce using rule 4
	'not'          reduce using rule 4
	'of'           reduce using rule 4
	'then'         reduce using rule 4
	'with'         reduce using rule 4
	'}'            reduce using rule 4
	L_integ        reduce using rule 4
	L_BitVariable  reduce using rule 4
	L_Var          reduce using rule 4


State 9

	ListFunctionDeclaration -> FunctionDeclaration ListFunctionDeclaration .    (rule 153)

	%eof           reduce using rule 153


State 10

	FunctionType -> FunctionType ';' .                  (rule 150)
	FunctionDeclaration -> FunctionType ';' . FunctionDefinition ';'    (rule 151)

	';'            reduce using rule 150
	L_Var          shift, and enter state 8

	Var            goto state 26
	FunctionDefinitiongoto state 27

State 11

	FunctionType -> Var '::' . Type                     (rule 149)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'()'           shift, and enter state 20
	'Bit'          shift, and enter state 21
	'Bool'         shift, and enter state 22
	'Int'          shift, and enter state 23
	'Qbit'         shift, and enter state 24
	'['            shift, and enter state 25

	Type           goto state 12
	Type1          goto state 13
	Type2          goto state 14
	Type3          goto state 15
	Type5          goto state 16
	Type4          goto state 17

State 12

	Type -> Type . '->' Type1                           (rule 32)
	FunctionType -> Var '::' Type .                     (rule 149)

	'->'           shift, and enter state 38
	';'            reduce using rule 149


State 13

	Type -> Type1 .                                     (rule 33)
	Type1 -> Type1 . '+' Type2                          (rule 34)

	')'            reduce using rule 33
	'+'            shift, and enter state 37
	'->'           reduce using rule 33
	'.'            reduce using rule 33
	';'            reduce using rule 33
	']'            reduce using rule 33


State 14

	Type1 -> Type2 .                                    (rule 35)
	Type2 -> Type2 . '*' Type3                          (rule 36)

	')'            reduce using rule 35
	'*'            shift, and enter state 36
	'+'            reduce using rule 35
	'->'           reduce using rule 35
	'.'            reduce using rule 35
	';'            reduce using rule 35
	']'            reduce using rule 35


State 15

	Type2 -> Type3 .                                    (rule 37)

	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	'->'           reduce using rule 37
	'.'            reduce using rule 37
	';'            reduce using rule 37
	']'            reduce using rule 37


State 16

	Type4 -> Type5 .                                    (rule 48)

	')'            reduce using rule 48
	'*'            reduce using rule 48
	'**'           reduce using rule 48
	'+'            reduce using rule 48
	'->'           reduce using rule 48
	'.'            reduce using rule 48
	';'            reduce using rule 48
	']'            reduce using rule 48


State 17

	Type3 -> Type4 . '**' Integer                       (rule 38)
	Type3 -> Type4 .                                    (rule 40)

	')'            reduce using rule 40
	'*'            reduce using rule 40
	'**'           shift, and enter state 35
	'+'            reduce using rule 40
	'->'           reduce using rule 40
	'.'            reduce using rule 40
	';'            reduce using rule 40
	']'            reduce using rule 40


State 18

	Type3 -> '!' . Type4                                (rule 39)

	'('            shift, and enter state 19
	'()'           shift, and enter state 20
	'Bit'          shift, and enter state 21
	'Bool'         shift, and enter state 22
	'Int'          shift, and enter state 23
	'Qbit'         shift, and enter state 24
	'['            shift, and enter state 25

	Type5          goto state 16
	Type4          goto state 34

State 19

	Type5 -> '(' . Type ')'                             (rule 47)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'()'           shift, and enter state 20
	'Bit'          shift, and enter state 21
	'Bool'         shift, and enter state 22
	'Int'          shift, and enter state 23
	'Qbit'         shift, and enter state 24
	'['            shift, and enter state 25

	Type           goto state 33
	Type1          goto state 13
	Type2          goto state 14
	Type3          goto state 15
	Type5          goto state 16
	Type4          goto state 17

State 20

	Type5 -> '()' .                                     (rule 45)

	')'            reduce using rule 45
	'*'            reduce using rule 45
	'**'           reduce using rule 45
	'+'            reduce using rule 45
	'->'           reduce using rule 45
	'.'            reduce using rule 45
	';'            reduce using rule 45
	']'            reduce using rule 45


State 21

	Type5 -> 'Bit' .                                    (rule 42)

	')'            reduce using rule 42
	'*'            reduce using rule 42
	'**'           reduce using rule 42
	'+'            reduce using rule 42
	'->'           reduce using rule 42
	'.'            reduce using rule 42
	';'            reduce using rule 42
	']'            reduce using rule 42


State 22

	Type5 -> 'Bool' .                                   (rule 41)

	')'            reduce using rule 41
	'*'            reduce using rule 41
	'**'           reduce using rule 41
	'+'            reduce using rule 41
	'->'           reduce using rule 41
	'.'            reduce using rule 41
	';'            reduce using rule 41
	']'            reduce using rule 41


State 23

	Type5 -> 'Int' .                                    (rule 43)

	')'            reduce using rule 43
	'*'            reduce using rule 43
	'**'           reduce using rule 43
	'+'            reduce using rule 43
	'->'           reduce using rule 43
	'.'            reduce using rule 43
	';'            reduce using rule 43
	']'            reduce using rule 43


State 24

	Type5 -> 'Qbit' .                                   (rule 44)

	')'            reduce using rule 44
	'*'            reduce using rule 44
	'**'           reduce using rule 44
	'+'            reduce using rule 44
	'->'           reduce using rule 44
	'.'            reduce using rule 44
	';'            reduce using rule 44
	']'            reduce using rule 44


State 25

	Type5 -> '[' . Type ']'                             (rule 46)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'()'           shift, and enter state 20
	'Bit'          shift, and enter state 21
	'Bool'         shift, and enter state 22
	'Int'          shift, and enter state 23
	'Qbit'         shift, and enter state 24
	'['            shift, and enter state 25

	Type           goto state 32
	Type1          goto state 13
	Type2          goto state 14
	Type3          goto state 15
	Type5          goto state 16
	Type4          goto state 17

State 26

	FunctionDefinition -> Var . ListArg '=' Term        (rule 147)

	'='            reduce using rule 145
	L_Var          shift, and enter state 8

	Var            goto state 29
	Arg            goto state 30
	ListArg        goto state 31

State 27

	FunctionDefinition -> FunctionDefinition . ';'      (rule 148)
	FunctionDeclaration -> FunctionType ';' FunctionDefinition . ';'    (rule 151)

	';'            shift, and enter state 28


State 28

	FunctionDefinition -> FunctionDefinition ';' .      (rule 148)
	FunctionDeclaration -> FunctionType ';' FunctionDefinition ';' .    (rule 151)

	';'            reduce using rule 148
	L_Var          reduce using rule 151
	%eof           reduce using rule 151


State 29

	Arg -> Var .                                        (rule 144)

	'='            reduce using rule 144
	L_Var          reduce using rule 144


State 30

	ListArg -> Arg . ListArg                            (rule 146)

	'='            reduce using rule 145
	L_Var          shift, and enter state 8

	Var            goto state 29
	Arg            goto state 30
	ListArg        goto state 47

State 31

	FunctionDefinition -> Var ListArg . '=' Term        (rule 147)

	'='            shift, and enter state 46


State 32

	Type -> Type . '->' Type1                           (rule 32)
	Type5 -> '[' Type . ']'                             (rule 46)

	'->'           shift, and enter state 38
	']'            shift, and enter state 45


State 33

	Type -> Type . '->' Type1                           (rule 32)
	Type5 -> '(' Type . ')'                             (rule 47)

	')'            shift, and enter state 44
	'->'           shift, and enter state 38


State 34

	Type3 -> '!' Type4 .                                (rule 39)

	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	'->'           reduce using rule 39
	'.'            reduce using rule 39
	';'            reduce using rule 39
	']'            reduce using rule 39


State 35

	Type3 -> Type4 '**' . Integer                       (rule 38)

	L_integ        shift, and enter state 43

	Integer        goto state 42

State 36

	Type2 -> Type2 '*' . Type3                          (rule 36)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'()'           shift, and enter state 20
	'Bit'          shift, and enter state 21
	'Bool'         shift, and enter state 22
	'Int'          shift, and enter state 23
	'Qbit'         shift, and enter state 24
	'['            shift, and enter state 25

	Type3          goto state 41
	Type5          goto state 16
	Type4          goto state 17

State 37

	Type1 -> Type1 '+' . Type2                          (rule 34)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'()'           shift, and enter state 20
	'Bit'          shift, and enter state 21
	'Bool'         shift, and enter state 22
	'Int'          shift, and enter state 23
	'Qbit'         shift, and enter state 24
	'['            shift, and enter state 25

	Type2          goto state 40
	Type3          goto state 15
	Type5          goto state 16
	Type4          goto state 17

State 38

	Type -> Type '->' . Type1                           (rule 32)

	'!'            shift, and enter state 18
	'('            shift, and enter state 19
	'()'           shift, and enter state 20
	'Bit'          shift, and enter state 21
	'Bool'         shift, and enter state 22
	'Int'          shift, and enter state 23
	'Qbit'         shift, and enter state 24
	'['            shift, and enter state 25

	Type1          goto state 39
	Type2          goto state 14
	Type3          goto state 15
	Type5          goto state 16
	Type4          goto state 17

State 39

	Type -> Type '->' Type1 .                           (rule 32)
	Type1 -> Type1 . '+' Type2                          (rule 34)

	')'            reduce using rule 32
	'+'            shift, and enter state 37
	'->'           reduce using rule 32
	'.'            reduce using rule 32
	';'            reduce using rule 32
	']'            reduce using rule 32


State 40

	Type1 -> Type1 '+' Type2 .                          (rule 34)
	Type2 -> Type2 . '*' Type3                          (rule 36)

	')'            reduce using rule 34
	'*'            shift, and enter state 36
	'+'            reduce using rule 34
	'->'           reduce using rule 34
	'.'            reduce using rule 34
	';'            reduce using rule 34
	']'            reduce using rule 34


State 41

	Type2 -> Type2 '*' Type3 .                          (rule 36)

	')'            reduce using rule 36
	'*'            reduce using rule 36
	'+'            reduce using rule 36
	'->'           reduce using rule 36
	'.'            reduce using rule 36
	';'            reduce using rule 36
	']'            reduce using rule 36


State 42

	Type3 -> Type4 '**' Integer .                       (rule 38)

	')'            reduce using rule 38
	'*'            reduce using rule 38
	'+'            reduce using rule 38
	'->'           reduce using rule 38
	'.'            reduce using rule 38
	';'            reduce using rule 38
	']'            reduce using rule 38


State 43

	Integer -> L_integ .                                (rule 2)

	'!!'           reduce using rule 2
	'$'            reduce using rule 2
	'&&'           reduce using rule 2
	'('            reduce using rule 2
	'()'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	'++'           reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'->'           reduce using rule 2
	'.'            reduce using rule 2
	'/'            reduce using rule 2
	'/='           reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'@+'           reduce using rule 2
	'@+i'          reduce using rule 2
	'@-'           reduce using rule 2
	'@-i'          reduce using rule 2
	'@0'           reduce using rule 2
	'@1'           reduce using rule 2
	'False'        reduce using rule 2
	'True'         reduce using rule 2
	'['            reduce using rule 2
	'[]'           reduce using rule 2
	']'            reduce using rule 2
	'else'         reduce using rule 2
	'gate'         reduce using rule 2
	'not'          reduce using rule 2
	'of'           reduce using rule 2
	'then'         reduce using rule 2
	'with'         reduce using rule 2
	'||'           reduce using rule 2
	'}'            reduce using rule 2
	L_integ        reduce using rule 2
	L_BitVariable  reduce using rule 2
	L_Var          reduce using rule 2


State 44

	Type5 -> '(' Type ')' .                             (rule 47)

	')'            reduce using rule 47
	'*'            reduce using rule 47
	'**'           reduce using rule 47
	'+'            reduce using rule 47
	'->'           reduce using rule 47
	'.'            reduce using rule 47
	';'            reduce using rule 47
	']'            reduce using rule 47


State 45

	Type5 -> '[' Type ']' .                             (rule 46)

	')'            reduce using rule 46
	'*'            reduce using rule 46
	'**'           reduce using rule 46
	'+'            reduce using rule 46
	'->'           reduce using rule 46
	'.'            reduce using rule 46
	';'            reduce using rule 46
	']'            reduce using rule 46


State 46

	FunctionDefinition -> Var ListArg '=' . Term        (rule 147)

	'('            shift, and enter state 68
	'()'           shift, and enter state 69
	'@+'           shift, and enter state 70
	'@+i'          shift, and enter state 71
	'@-'           shift, and enter state 72
	'@-i'          shift, and enter state 73
	'@0'           shift, and enter state 74
	'@1'           shift, and enter state 75
	'False'        shift, and enter state 76
	'True'         shift, and enter state 77
	'['            shift, and enter state 78
	'[]'           shift, and enter state 79
	'case'         shift, and enter state 80
	'gate'         shift, and enter state 81
	'if'           shift, and enter state 82
	'let'          shift, and enter state 83
	'not'          shift, and enter state 84
	'with'         shift, and enter state 85
	L_integ        shift, and enter state 43
	L_BitVariable  shift, and enter state 86
	L_Var          shift, and enter state 8
	L_Lambda       shift, and enter state 87

	Integer        goto state 48
	BitVariable    goto state 49
	Var            goto state 50
	Lambda         goto state 51
	IntegerExpressiongoto state 52
	IntegerExpression1goto state 53
	IntegerExpression2goto state 54
	BoolValue      goto state 55
	BoolExpression goto state 56
	BoolExpression1goto state 57
	BoolExpression2goto state 58
	BasisState     goto state 59
	Bit            goto state 60
	Tuple          goto state 61
	Term1          goto state 62
	Term2          goto state 63
	Term3          goto state 64
	Term           goto state 65
	Term4          goto state 66
	List           goto state 67

State 47

	ListArg -> Arg ListArg .                            (rule 146)

	'='            reduce using rule 146


State 48

	IntegerExpression2 -> Integer .                     (rule 13)
